--- a/jianshu-manager-web/src/main/webapp/WEB-INF/web.xml
+++ b/jianshu-manager-web/src/main/webapp/WEB-INF/web.xml
@@ -43,8 +43,15 @@
         <!--  / 表示拦截所有的静态资源，不包括转发JSP -->
         <url-pattern>/</url-pattern>
     </servlet-mapping>
-    
 
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.png</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.jpg</url-pattern>
+    </servlet-mapping>
 
 
 </web-app>
