--- a/jianshu-manager-web/pom.xml
+++ b/jianshu-manager-web/pom.xml
@@ -105,6 +105,25 @@
             <artifactId>zookeeper</artifactId>
             <version>3.4.13</version>
         </dependency>
+
+        <!--富文本编辑器-->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180813</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>ueditor</artifactId>
+            <version>1.4.3</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <plugins>
