--- a/jianshu-manager-web/src/main/webapp/WEB-INF/web.xml
+++ b/jianshu-manager-web/src/main/webapp/WEB-INF/web.xml
@@ -45,6 +45,24 @@
         <servlet-name>default</servlet-name>
         <url-pattern>*.jpg</url-pattern>
     </servlet-mapping>
-
-
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.js</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.css</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.gif</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.swf</url-pattern>
+    </servlet-mapping>
+   <context-param>
+       <param-name>webAppRootKey</param-name>
+       <param-value>lightnote.root</param-value>
+   </context-param>
 </web-app>
