--- a/pom.xml
+++ b/pom.xml
@@ -207,7 +207,22 @@
             <artifactId>spring-aop</artifactId>
             <version>5.0.4.RELEASE</version>
         </dependency>
-
+        <!--富文本编辑器-->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180813</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>ueditor</artifactId>
+            <version>1.4.3</version>
+        </dependency>
     </dependencies>
 
     <build>
