--- a/jianshu-manager-web/pom.xml
+++ b/jianshu-manager-web/pom.xml
@@ -105,6 +105,12 @@
             <artifactId>zookeeper</artifactId>
             <version>3.4.13</version>
         </dependency>
+        <!--图片上传-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
 
         <!--富文本编辑器-->
         <dependency>
