--- a/jianshu-manager-web/src/main/webapp/WEB-INF/web.xml
+++ b/jianshu-manager-web/src/main/webapp/WEB-INF/web.xml
@@ -47,6 +47,10 @@
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>default</servlet-name>
+        <url-pattern>*.jpeg</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
         <url-pattern>*.js</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
