--- a/jianshu-manager-web/src/main/resources/resource/resource.properties
+++ b/jianshu-manager-web/src/main/resources/resource/resource.properties
@@ -1,2 +1,4 @@
 #\u9996\u9875user \u6BCF\u884C\u663E\u793A\u7684\u6570\u91CF
-CURRENT_COUNT=2
+USER_CURRENT_COUNT=2
+#\u9996\u9875 article \u6BCF\u6B21\u6DFB\u52A0\u7684\u6570\u91CF
+ARTICLE_CURRENT_COUNT=2
