--- a/jianshu-manager-web/src/main/resources/resource/resource.properties
+++ b/jianshu-manager-web/src/main/resources/resource/resource.properties
@@ -4,3 +4,5 @@ USER_CURRENT_COUNT=2
 ARTICLE_CURRENT_COUNT=2
 #\u641C\u7D22\u67E5\u8BE2\u6BCF\u9875\u663E\u793A\u7684\u6587\u7AE0\u6570\u91CF
 SEARCH_ARTICLE_COUNT=3
+#\u641C\u7D22\u67E5\u8BE2\u6BCF\u9875\u663E\u793A\u7684\u7528\u6237\u6570\u91CF
+SEARCH_USER_COUNT=1
