--- a/jianshu-manager-web/src/main/resources/resource/resource.properties
+++ b/jianshu-manager-web/src/main/resources/resource/resource.properties
@@ -6,3 +6,5 @@ ARTICLE_CURRENT_COUNT=2
 SEARCH_ARTICLE_COUNT=3
 #\u641C\u7D22\u67E5\u8BE2\u6BCF\u9875\u663E\u793A\u7684\u7528\u6237\u6570\u91CF
 SEARCH_USER_COUNT=1
+#\u6240\u6709\u4F5C\u8005\u4E00\u6B21\u663E\u793A\u6570\u91CF
+ALLUSER_CURRENT_COUNT=5
