--- a/jianshu-manager-web/src/main/webapp/WEB-INF/web.xml
+++ b/jianshu-manager-web/src/main/webapp/WEB-INF/web.xml
@@ -38,11 +38,11 @@
 
     </servlet-mapping>
 
-    <!--<servlet-mapping>-->
-        <!--<servlet-name>default</servlet-name>-->
-        <!--<url-pattern>*.html</url-pattern>-->
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>/ueditor/*</url-pattern>
+    </servlet-mapping>
 
-    <!--</servlet-mapping>-->
     <servlet-mapping>
         <servlet-name>default</servlet-name>
         <url-pattern>*.png</url-pattern>
